// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order/Detail/OrderSteps should match to snapshot when user is assignee user 1`] = `
<div>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-18 16:35:10
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.createOrder
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-gray"
      >
        <span
          aria-label="clock-circle"
          class="anticon anticon-clock-circle timeline-clock-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              --
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              --
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <button
                  class="ant-btn ant-btn-primary"
                  type="button"
                >
                  <span>
                    order.operator.sqlExecute
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-dangerous"
                  type="button"
                >
                  <span>
                    order.operator.reject
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Order/Detail/OrderSteps should match to snapshot when user is assignee user 2`] = `
<div>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:46:32
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.createOrder
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-gray"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              --
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              --
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.alreadyRejected
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Order/Detail/OrderSteps should match to snapshot when user is assignee user 3`] = `
<div>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:48:57
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.createOrder
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-red"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:49:09
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            <div>
              <span
                class="ant-typography"
              >
                order.operator.rejectDetail
              </span>
            </div>
            <span
              class="ant-typography ant-typography-danger"
            >
              order.operator.rejectReason
              :
              test
            </span>
            <div>
              <span
                class="ant-typography ant-typography-danger"
              >
                (
                order.operator.rejectTips
                )
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Order/Detail/OrderSteps should match to snapshot when user is assignee user 4`] = `
<div>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:57:25
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.createOrder
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:57:31
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.executed
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Order/Detail/OrderSteps should match to snapshot when user is assignee user 5`] = `
<div>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-18 16:35:10
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.createOrder
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-gray"
      >
        <span
          aria-label="clock-circle"
          class="anticon anticon-clock-circle timeline-clock-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              --
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              --
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <button
                  class="ant-btn ant-btn-primary"
                  type="button"
                >
                  <span>
                    order.operator.sqlReview
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-dangerous"
                  type="button"
                >
                  <span>
                    order.operator.reject
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-gray"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              --
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              --
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.notArrival
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Order/Detail/OrderSteps should match to snapshot when user is assignee user 6`] = `
<div>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:46:32
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.createOrder
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-gray"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              --
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              --
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.alreadyRejected
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-gray"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              --
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              --
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.alreadyRejected
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Order/Detail/OrderSteps should match to snapshot when user is assignee user 7`] = `
<div>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:48:57
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.createOrder
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:49:09
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.approved
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-red"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:49:09
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            <div>
              <span
                class="ant-typography"
              >
                order.operator.rejectDetail
              </span>
            </div>
            <span
              class="ant-typography ant-typography-danger"
            >
              order.operator.rejectReason
              :
              test
            </span>
            <div>
              <span
                class="ant-typography ant-typography-danger"
              >
                (
                order.operator.rejectTips
                )
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Order/Detail/OrderSteps should match to snapshot when user is assignee user 8`] = `
<div>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:57:25
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.createOrder
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:49:09
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.approved
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:57:31
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.executed
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Order/Detail/OrderSteps should match to snapshot when user is not assignee user 1`] = `
<div>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-18 16:35:10
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.createOrder
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-gray"
      >
        <span
          aria-label="clock-circle"
          class="anticon anticon-clock-circle timeline-clock-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              --
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              --
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.wait
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Order/Detail/OrderSteps should match to snapshot when user is not assignee user 2`] = `
<div>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:46:32
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.createOrder
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-gray"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              --
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              --
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.alreadyRejected
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Order/Detail/OrderSteps should match to snapshot when user is not assignee user 3`] = `
<div>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:48:57
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.createOrder
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-red"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:49:09
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            <div>
              <span
                class="ant-typography"
              >
                order.operator.rejectDetail
              </span>
            </div>
            <span
              class="ant-typography ant-typography-danger"
            >
              order.operator.rejectReason
              :
              test
            </span>
            <div>
              <span
                class="ant-typography ant-typography-danger"
              >
                (
                order.operator.rejectTips
                )
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Order/Detail/OrderSteps should match to snapshot when user is not assignee user 4`] = `
<div>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:57:25
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.createOrder
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:57:31
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.executed
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Order/Detail/OrderSteps should match to snapshot when user is not assignee user 5`] = `
<div>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-18 16:35:10
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.createOrder
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-gray"
      >
        <span
          aria-label="clock-circle"
          class="anticon anticon-clock-circle timeline-clock-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              --
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              --
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.wait
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-gray"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              --
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              --
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.notArrival
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Order/Detail/OrderSteps should match to snapshot when user is not assignee user 6`] = `
<div>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:46:32
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.createOrder
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-gray"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              --
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              --
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.alreadyRejected
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-gray"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              --
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              --
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.alreadyRejected
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Order/Detail/OrderSteps should match to snapshot when user is not assignee user 7`] = `
<div>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:48:57
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.createOrder
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:49:09
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.approved
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-red"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:49:09
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            <div>
              <span
                class="ant-typography"
              >
                order.operator.rejectDetail
              </span>
            </div>
            <span
              class="ant-typography ant-typography-danger"
            >
              order.operator.rejectReason
              :
              test
            </span>
            <div>
              <span
                class="ant-typography ant-typography-danger"
              >
                (
                order.operator.rejectTips
                )
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Order/Detail/OrderSteps should match to snapshot when user is not assignee user 8`] = `
<div>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:57:25
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.createOrder
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:49:09
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.approved
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-green"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-5"
          >
            <div
              class="ant-col ant-col-24"
            >
              order.operator.time
              :
              2021-05-20 10:57:31
            </div>
            <div
              class="ant-col ant-col-24"
            >
              order.operator.user
              :
              admin
            </div>
          </div>
          <div
            class="ant-col ant-col-19"
          >
            order.operator.executed
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
